Changes for Perl programming language extension Module-Install

1.04 Thu 20 Oct 2011
	- Fixed _cmp to compare properly (MIYAGAWA)
	- Fixed the automated MakeMaker dependency addition (MIYAGAWA)

1.03 Wed 19 Oct 2011
	- META.yml flag dynamic_config is now always generated (ADAMK)
	- Added the convenience command static_config, as the default is to be
	  dynamic (ADAMK)
	- Module::Install::DSL will automatically set static_config unless it
	  can see an 'if' or 'unless' suffix (ADAMK)

1.02 Thu 29 Sep 2011
	- Support for installdeps_target in Module::Install::AutoInstall and
	  Module::AutoInstall (Caelum)
	- Support for installdeps_notest, upgradedeps and upgradedeps_notest,
	  listdeps and listalldeps targets in Module::AutoInstall (Caelum)

1.01 Wed 27 Apr 2011
	- Better error message in install_share (CHORNY)
	- Compatibility with MYMETA.yml support in EUMM (CHORNY)
	- Support for extraction of Artistic 2.0 license (CHORNY)
	- Support https links when searching for bug trackers (CHORNY)

1.00 Tue 22 Jun 2010
	- Remove obsolete text warning about nonexistent auto_install()
	  woes
	- auto_install() wrongly merged build_requires entries into
	  requires; note that it's correct build_requires entries
	  are merged into requires if you use older versions of
	  EUMM, which didn't support build_requires. (ISHIGAKI)

0.99 Tue  1 Jun 2010
	- FindBin->again only works on 5.8.3

0.98 Mon 21 May 2010
	- Resolved #57326: Tests fail when being run in parallel
	  (by Florian Ragwitz) (ISHIGAKI)
	- Resolved #57335: Re: Problem with Module::Install + Fix
	  (by Paul Makepeace) (ISHIGAKI)
	- Added "add_metadata" to add extra (experimental) metadata to
	  META.yml (requested by Florian Ragwitz) (ISHIGAKI)
	- Fixed a test to check EU::MM version as only newer EUMM has
	  MIN_PERL_VERSION (ISHIGAKI) 
	- Made fixup_makefile a bit robust, not to be interfered by
	  antivirus etc (ISHIGAKI)

0.97 Mon 10 May 2010
	- Added missing LWP dependency, starting with 2 year old version (ADAMK)
