@@ -3,6 +3,7 @@ Changes for Perl programming language extension Module-Install
 1.04 Thu 20 Oct 2011
 	- Fixed _cmp to compare properly (MIYAGAWA)
 	- Fixed the automated MakeMaker dependency addition (MIYAGAWA)
+	- Last Perl 5.5 compatible MakeMaker was actually 6.36 (ADAMK)
 
 1.03 Wed 19 Oct 2011
 	- META.yml flag dynamic_config is now always generated (ADAMK)
